[package]
name = "syncstorage-sql-db-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
backtrace.workspace = true
base64.workspace = true
futures.workspace = true
http.workspace = true
slog-scope.workspace = true
diesel_logger.workspace = true
thiserror.workspace = true
async-trait.workspace = true

diesel = { workspace = true, features = ["sqlite", "r2d2"] }
diesel_migrations = { workspace = true, features = ["sqlite"] }
syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common" }
syncstorage-db-common = { path = "../syncstorage-db-common" }
syncstorage-settings = { path = "../syncstorage-settings" }
url = "2.1"

[dev-dependencies]
env_logger.workspace=true
syncserver-settings = { path = "../syncserver-settings" }
