[package]
name = "tokenserver-db-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
backtrace.workspace = true
futures.workspace = true
http.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
slog-scope.workspace = true
diesel.workspace = true
diesel_logger.workspace = true
diesel_migrations.workspace = true
thiserror.workspace = true
async-trait.workspace = true

syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common", features = ["sql"] }
tokenserver-common = { path = "../tokenserver-common" }
tokenserver-settings = { path = "../tokenserver-settings" }
tokio = { workspace = true, features = ["macros", "sync"] }

[dev-dependencies]
env_logger.workspace = true
syncserver-settings = { path = "../syncserver-settings" }
